# notif

./: .env.example  .gitignore  README.md  SETUP.md  TECHNICAL_DESIGN.md  pyproject.toml  spec.md
.github/workflows/: monitor.yml
config/: properties.yaml
scripts/: persist_state_repo.sh  prepare_state_repo.sh
src/booking_monitor/: __init__.py  app.py  config.py  detector.py  ical.py  models.py  runner.py  storage.py
src/booking_monitor/notifiers/: discord.py
state/: state.json
tests/: test_detector.py
